fixed double scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     line-height: 1.5rem;
     color: #333;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: #fdfffc;
     position: relative;
     min-height: 100%;
